# TestEngine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  __clean.cmd  __gen_solution.cmd  __install_githooks.cmd  _build_debug.cmd  _build_release.cmd  _cmake.cmd  _cmake_gen_and_open.cmd  _cmake_ninja.cmd  _format_code.cmd  _run_debug.cmd  _run_release.cmd  editor_preferences.xml  todo.txt
.cursor/rules/: assert-verify.mdc  comments-sparingly.mdc  commit-messages.mdc  cpp-class-override-order.mdc  cpp-nodiscard.mdc  cpp-style.mdc  debug-build-verify.mdc  project-overview.mdc  property-codegen.mdc  signal-subscriptions.mdc  testengine-agent.mdc
Test Engine/: Test Engine.sln  Test Engine.sln.DotSettings  Test Engine.vcxproj  Test Engine.vcxproj.filters
assets/prefabs/: CurrentScene.xml
assets/sceneObjects/8 ball pool/: Ball.xml
assets/sceneObjects/BallGame/: Ball.xml  Ball2.xml
assets/scenes/: 8 ball pool.xml  BallGame.xml
assets/shaders/: ComposedSurface.frag  GravitationalLens.frag  RadialUvWarp.frag  ShapeLighting.frag
cmake/: RunPropertyCodegen.cmake  WinNinjaEnv.cmd
docs/: CMakeLists-explained.md  PROPERTY_CODEGEN.md
docs/plans/: viewport-fullscreen-post-pipeline.plan.md
githooks/: pre-commit
src/: AiPlatformController.cpp  AiPlatformController.h  Ball.cpp  Ball.h  BodyDebugComponent.cpp  BodyDebugComponent.h  BodyPullHandler.cpp  BodyPullHandler.h  CollisionComponent.h  Component.h  ComponentBase.h  ComponentHolder.cpp  ComponentHolder.h  DebugComponent.cpp  DebugComponent.h  Delegates.h  EngineInterface.cpp  EngineInterface.h  FontManager.cpp  FontManager.h  FpsNode.cpp  FpsNode.h  GlobalInterface.cpp  GlobalInterface.h  Node.cpp  Node.h  OverlappingComponent.h  PhysicalComponent.h  PhysicalObject.cpp  PhysicalObject.h  PhysicsDebugComponent.cpp  PhysicsDebugComponent.h  PhysicsHandler.cpp  PhysicsHandler.h  PlatformControllerBase.h  PongBall.cpp  PongBall.h  PongEnvironment.cpp  PongEnvironment.h  PongPlatform.cpp  (+28 more)
src/Engine/: ComponentBase.h  ComponentHolder.cpp  ComponentHolder.h  Delegates.h  EngineInterface.cpp  EngineInterface.h  FontManager.cpp  FontManager.h  FpsCounterBehaviour.cpp  FpsCounterBehaviour.h  FpsNode.cpp  FpsNode.h  FpsNodeVisual.cpp  FpsNodeVisual.h  NodeVisual.h  Scene.h  SceneNode.cpp  SceneNode.h  Singleton.h  SortingStrategyEntity.h  TestEngineIncludeHook.h  Updateable.h  UserInput.cpp  UserInput.h  Utils.cpp  Utils.h  VectorArrow.cpp  VectorArrow.h  VectorArrowNodeVisual.cpp  VectorArrowNodeVisual.h  main.cpp
src/Engine/App/: EngineContext.cpp  EngineContext.h  EngineIContext.cpp  EngineInterface.cpp  EngineInterface.h  EventHandlerBase.cpp  EventHandlerBase.h  EventsDispatcher.cpp  FontManager.h  FpsCounterBehaviour.cpp  FpsCounterBehaviour.h  FunctionInputHandler.h  InputHandlerBase.cpp  InputHandlerBase.h  MainContext.cpp  MainContext.h  MainLoop.cpp  MainLoop.h  UserInput.cpp  UserInput.h  Utils.cpp  Utils.h  main.cpp
src/Engine/Background/: GameBackgroundContext.cpp  GameBackgroundContext.h  IGameBackground.h  ParallaxTextureGameBackground.cpp  ParallaxTextureGameBackground.h  PlainColorGameBackground.cpp  PlainColorGameBackground.h  TiledGameBackground.cpp  TiledGameBackground.h
src/Engine/Behaviour/: Behaviour.cpp  Behaviour.h  ButtonBehaviour.cpp  ButtonBehaviour.h  EventHandlerBehaviourBase.cpp  EventHandlerBehaviourBase.h  FpsCounterBehaviour.cpp  FpsCounterBehaviour.h  GravitationalLensBehaviour.cpp  GravitationalLensBehaviour.h  InputHandlerBehaviourBase.cpp  InputHandlerBehaviourBase.h  PointLightBehaviour.cpp  PointLightBehaviour.h  RadialUvWarpBehaviour.cpp  RadialUvWarpBehaviour.h  ShapeLightReceiverBehaviour.cpp  ShapeLightReceiverBehaviour.h
src/Engine/Core/: AssetManager.cpp  AssetManager.h  AssetManager.inl  AssetRef.h  AssetRegistrar.h  AssetRegistry.cpp  AssetRegistry.h  AssetRegistryInit.cpp  Behaviour.h  CameraViewAnimator.cpp  CameraViewAnimator.h  ColorUtils.cpp  ColorUtils.h  ConnectionHolderBase.h  ContentPaths.h  Delegates.h  EntityId.h  EntityIdUtils.cpp  EntityIdUtils.h  EntityOnNode.cpp  EntityOnNode.h  EntitySlot.h  EventHandlerBase.cpp  EventsDispatcher.cpp  EventsDispatcher.h  FontManager.cpp  FontManager.h  IPropertiesProvider.cpp  IPropertiesProvider.h  MainContext.cpp  MainContext.h  MainLoop.cpp  MainLoop.h  MathUtils.cpp  MathUtils.h  MetaClass.h  PeriodicTaskExecutor.cpp  PeriodicTaskExecutor.h  PropertyKind.h  PropertyMeta.h  (+33 more)
src/Engine/Editor/: DebugSettingsWidget.cpp  DebugSettingsWidget.h  Editor.cpp  Editor.h  EditorHistory.cpp  EditorHistory.h  EditorNodePick.cpp  EditorNodePick.h  EditorPreferences.cpp  EditorPreferences.h  EditorSceneGrid.cpp  EditorSceneGrid.h  EditorShapeStrokeGate.cpp  EditorShapeStrokeGate.h  EditorToolManager.cpp  EditorToolManager.h  EditorToolsWidget.cpp  EditorToolsWidget.h  EditorVisualTheme.cpp  EditorVisualTheme.h  GameBackgroundWidget.cpp  GameBackgroundWidget.h  ImGuiUtils.cpp  ImGuiUtils.h  NativeFileDialog.cpp  NativeFileDialog.h  NodeInspectorWidget.cpp  NodeInspectorWidget.h  PhysicsVisualizer.cpp  PhysicsVisualizer.h  PropertyTreeDrawer.cpp  PropertyTreeDrawer.h  SceneClipboard.cpp  SceneClipboard.h  SceneCloneUtils.cpp  SceneCloneUtils.h  SceneHierarchyWidget.cpp  SceneHierarchyWidget.h  ValuesProviders.cpp  ValuesProviders.h  (+1 more)
src/Engine/Physics/: AbstractBody.cpp  AbstractBody.h  AbstractShapeBody.cpp  AbstractShapeBody.h  AbstractShapeBodyFixed.h  (+30 more)
src/Environments/: EnvironmentBase.h
src/LaunchProfiles/: LaunchProfileBase.h
src/Physics/: AbstractBody.cpp  AbstractBody.h  AbstractShapeBody.h  CollisionDetails.h  IntersectionDetails.h  PhysicalComponent.h  PhysicsHandler.cpp  PhysicsHandler.h  PolygonBody.h  ShapeBody.h  ShapeBodyBase.h
src/Pong/: AiPlatformController.cpp  AiPlatformController.h  PlatformControllerBase.h  PongBall.cpp  PongBall.h  PongEnvironment.cpp  PongEnvironment.h  PongPlatform.cpp  PongPlatform.h  UserPlatformContoller.cpp  UserPlatformContoller.h
src/Test/: TestEnvironment.cpp  TestEnvironment.h
tools/: generate_8ball_pool_textures.py  property_codegen.py
(+255 files in other folders)
